html has been done

--- a/index.html
+++ b/index.html
@@ -3,10 +3,142 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href=".style.scss">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Bakery store LP page</title>
 </head>
 <body>
-  <div>Test</div>
+  <div class="wrapper">
+    <div class="nav">
+      <div class="nav--logo__img">
+        <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+      </div>
+      <div class="nav--menu__btn">
+        <span class="bar bar-top"></span>
+        <span class="bar bar-middle"></span>
+        <span class="bar bar-bottom"></span>
+      </div>
+      <div class="nav--list__wrapper">
+        <div class="nav--list">
+          <div class="nav--menu__logo">
+            <a href=""><img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""></a>
+          </div>
+          <ul>
+            <li>Home</li>
+            <li>Cakes&Sweets</li>
+            <li>About us</li>
+            <li>Delivery</li>
+            <li>Store</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="contents--wrapper">
+      <div class="header">
+        <div class="header--wrapper">
+          <div class="header--wrapper__left">
+            <div class="header--wrapper__leftContents">
+              <h1>Special cakes for special occasions!</h1>
+              <h4>Every person is unique. Why shouldn't thier cake be?</h4>
+              <button>choose a cake</button>
+            </div>
+            <div class="header--wrapper__leftImg">
+              <figure>
+                <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+                <img src="/img/2021_June_Wai+Group_S0A9752.jpeg" alt="">
+                <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+              </figure>
+            </div>
+          </div>
+          <div class="header--wrapper__rightImg">
+            <figure>
+              <img src="/img/cake_headerImg.png" alt="">
+            </figure>
+          </div>
+        </div>
+      </div>
+
+        <main>
+          <div class="products--wrapper">
+            <h3>Cafe & Sweets</h3>
+            <figure>
+              <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+            </figure>
+          </div>
+          <div class="aboutUs--wrapper">
+            <h3>About us</h3>
+            <div class="aboutUs--contents__wrapper">
+              <div class="aboutUs--text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta adipisci veritatis quod provident iure doloremque, quidem accusamus numquam mollitia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta adipisci veritatis quod provident iure doloremque, quidem accusamus numquam mollitia.</p>
+              </div>
+              <figure>
+                <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+              </figure>
+            </div>
+          </div>
+          <div class="bestSeller--wrapper">
+            <div class="bestSeller--text">
+              <h3>Best seller</h3>
+              <h3>Whole catalog</h3>
+            </div>
+            <figure>
+              <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+              <figcaption></figcaption>
+            </figure>
+          </div>
+          <div class="feature--wrapper">
+            <h3>What makes us special?</h3>
+            <div class="feature--contents__wrapper">
+              <div class="feature--wrapper__left">
+                <figure>
+                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                </figure>
+              </div>
+              <div class="feature--wrapper__right">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, adipisci!</p>
+                <figure>
+                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="sns--wrapper">
+            <h3>@yummy_sweets</h3>
+            <figure>
+              <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+            </figure>
+          </div>
+          <div class="contact--wrapper">
+            <h3>Contacts</h3>
+            <div class="contact--contents__wrapper">
+              <div class="contact--phone__wrapper">
+                <p>Phone</p>
+                <p>0906233580</p>
+              </div>
+              <div class="contact--email__wrapper">
+                <p>E-mail</p>
+                <p>ea80002@gmail.com</p>
+              </div>
+              <div class="contact--address__wrapper">
+                <p>Address</p>
+                <p>3738 Angus Drive</p>
+              </div>
+              <div class="contact--working__wrapper">
+                <p>Working hours</p>
+                <p>Daily: 08:00~22:00</p>
+              </div>
+            </div>
+          </div>
+          <div class="map--wrapper">
+
+          </div>
+        </main>
+        <footer>
+          <p>&copy;N.Sweets All right reserved</p>
+        </footer>
+    </div>
+  </div>
 </body>
 </html>
