html has been changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <div class="nav">
       <div class="nav--logo__img">
-        <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+        <!-- <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""> -->
       </div>
       <div class="nav--menu__btn">
         <span class="bar bar-top"></span>
@@ -20,7 +20,7 @@
       <div class="nav--list__wrapper">
         <div class="nav--list">
           <div class="nav--menu__logo">
-            <a href=""><img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""></a>
+            <a href=""><img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""></a>
           </div>
           <ul>
             <li>Home</li>
@@ -44,15 +44,15 @@
             </div>
             <div class="header--wrapper__leftImg">
               <figure>
-                <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
-                <img src="/img/2021_June_Wai+Group_S0A9752.jpeg" alt="">
-                <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+                <img src="./img/2021_June_Wai+Group_S0A9752.jpeg" alt="">
+                <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
               </figure>
             </div>
           </div>
           <div class="header--wrapper__rightImg">
             <figure>
-              <img src="/img/cake_headerImg.png" alt="">
+              <img src="./img/cake_headerImg.png" alt="">
             </figure>
           </div>
         </div>
@@ -62,7 +62,7 @@
           <div class="products--wrapper">
             <h3>Cafe & Sweets</h3>
             <figure>
-              <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+              <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
             </figure>
           </div>
           <div class="aboutUs--wrapper">
@@ -73,7 +73,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta adipisci veritatis quod provident iure doloremque, quidem accusamus numquam mollitia.</p>
               </div>
               <figure>
-                <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
               </figure>
             </div>
           </div>
@@ -83,7 +83,7 @@
               <h3>Whole catalog</h3>
             </div>
             <figure>
-              <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+              <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
               <figcaption></figcaption>
             </figure>
           </div>
@@ -92,14 +92,14 @@
             <div class="feature--contents__wrapper">
               <div class="feature--wrapper__left">
                 <figure>
-                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
                 </figure>
               </div>
               <div class="feature--wrapper__right">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, adipisci!</p>
                 <figure>
-                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
-                  <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
                 </figure>
               </div>
             </div>
@@ -107,7 +107,7 @@
           <div class="sns--wrapper">
             <h3>@yummy_sweets</h3>
             <figure>
-              <img src="/img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+              <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
             </figure>
           </div>
           <div class="contact--wrapper">
