css has been added

--- a/index.html
+++ b/index.html
@@ -1,79 +1,102 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Bakery store LP page</title>
-</head>
-<body>
-  <div class="wrapper">
-    <div class="nav">
-      <div class="nav--logo__img">
-        <!-- <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""> -->
-      </div>
-      <div class="nav--menu__btn">
-        <span class="bar bar-top"></span>
-        <span class="bar bar-middle"></span>
-        <span class="bar bar-bottom"></span>
-      </div>
-      <div class="nav--list__wrapper">
-        <div class="nav--list">
-          <div class="nav--menu__logo">
-            <a href=""><img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Bakery store LP page</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="nav">
+        <div class="nav--logo__img">
+          <!-- <img src="/img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt=""> -->
+        </div>
+        <div class="nav--menu__btn">
+          <span class="bar bar-top"></span>
+          <span class="bar bar-middle"></span>
+          <span class="bar bar-bottom"></span>
+        </div>
+        <div class="nav--list__wrapper">
+          <div class="nav--list">
+            <div class="nav--menu__logo">
+              <a href=""><img src="" alt="" /></a>
+            </div>
+            <ul>
+              <li>Home</li>
+              <li>Cakes&Sweets</li>
+              <li>About us</li>
+              <li>Delivery</li>
+              <li>Store</li>
+            </ul>
           </div>
-          <ul>
-            <li>Home</li>
-            <li>Cakes&Sweets</li>
-            <li>About us</li>
-            <li>Delivery</li>
-            <li>Store</li>
-          </ul>
         </div>
       </div>
-    </div>
 
-    <div class="contents--wrapper">
-      <div class="header">
-        <div class="header--wrapper">
-          <div class="header--wrapper__left">
-            <div class="header--wrapper__leftContents">
-              <h1>Special cakes for special occasions!</h1>
-              <h4>Every person is unique. Why shouldn't thier cake be?</h4>
-              <button>choose a cake</button>
+      <div class="contents--wrapper">
+        <div class="header">
+          <div class="header--wrapper">
+            <div class="header--wrapper__left">
+              <div class="header--wrapper__leftContents">
+                <h1>Special cakes for special occasions!</h1>
+                <h4>Every person is unique. Why shouldn't thier cake be?</h4>
+                <button>choose a cake</button>
+              </div>
+              <div class="header--wrapper__leftImg">
+                <figure>
+                  <img
+                    src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg"
+                    alt=""
+                  />
+                  <img src="./img/2021_June_Wai+Group_S0A9752.jpeg" alt="" />
+                  <img
+                    src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg"
+                    alt=""
+                  />
+                </figure>
+              </div>
             </div>
-            <div class="header--wrapper__leftImg">
+            <div class="header--wrapper__rightImg">
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
-                <img src="./img/2021_June_Wai+Group_S0A9752.jpeg" alt="">
-                <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                <img src="./img/cake_headerImg.png" alt="" />
               </figure>
             </div>
           </div>
-          <div class="header--wrapper__rightImg">
-            <figure>
-              <img src="./img/cake_headerImg.png" alt="">
-            </figure>
-          </div>
         </div>
-      </div>
 
         <main>
           <div class="products--wrapper">
-            <h3>Cafe & Sweets</h3>
-            <figure>
-              <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
-            </figure>
+            <h3>Cakes & Sweets</h3>
+            <div class="products--wrapper__img">
+              <figure>
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+              </figure>
+            </div>
           </div>
           <div class="aboutUs--wrapper">
-            <h3>About us</h3>
             <div class="aboutUs--contents__wrapper">
               <div class="aboutUs--text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta adipisci veritatis quod provident iure doloremque, quidem accusamus numquam mollitia.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta adipisci veritatis quod provident iure doloremque, quidem accusamus numquam mollitia.</p>
+                <h3>About us</h3>
+                <p>
+                  Help celebrate a special day or commemorate a significant
+                  occasion with a sweet treat from N.Sweet Bakery. Where you are
+                  searching for a special birthday cake. Or simply looking for a
+                  sweet ending to an everyday meal.
+                </p>
+                <p>
+                  N.Sweet is sure to have something freshly baked to suit your
+                  mood. We are proud to offer a wide variety of freshly baked
+                  goods daily. including gourmet cakes, cookies, pies,
+                  cheesecakes, brownies and over 20 flavors of cupcakes that no
+                  one can resist.
+                </p>
               </div>
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
+                <img src="./img/cookie.png" alt="" />
               </figure>
             </div>
           </div>
@@ -82,33 +105,68 @@
               <h3>Best seller</h3>
               <h3>Whole catalog</h3>
             </div>
-            <figure>
-              <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="">
-              <figcaption></figcaption>
-            </figure>
+            <div class="bestSeller--img">
+              <figure>
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <figcaption>Stickey toffy pudding</figcaption>
+              </figure>
+              <figure>
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <figcaption>Apple cider donut</figcaption>
+              </figure>
+              <figure>
+                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <figcaption>Apple pie gnola bars</figcaption>
+              </figure>
+            </div>
           </div>
           <div class="feature--wrapper">
             <h3>What makes us special?</h3>
             <div class="feature--contents__wrapper">
               <div class="feature--wrapper__left">
                 <figure>
-                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img
+                    src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg"
+                    alt=""
+                  />
                 </figure>
               </div>
               <div class="feature--wrapper__right">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, adipisci!</p>
+                <p>
+                  We carefully select our ingredients for their freshness,
+                  flavor and natural value. We choose organic, locally grown
+                  products when available. Everything we make embodies our
+                  commitment to consistency and excellence. The heart of the
+                  bakery is a small, dedicated group of hard working bakers.
+                </p>
+                <p>
+                  We are grateful to our amazing staff, loyal customers, and the
+                  most supportive local community who allow us to do the work we
+                  love every day.
+                </p>
                 <figure>
-                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
-                  <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
+                  <img src="./img/feature01.png" alt="" />
+                  <img src="./img/feature.02.png" alt="" />
                 </figure>
               </div>
             </div>
           </div>
           <div class="sns--wrapper">
             <h3>@yummy_sweets</h3>
-            <figure>
-              <img src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg" alt="">
-            </figure>
+            <div class="sns--img">
+              <figure>
+                <img src="/img/sns01.png" alt="" />
+                <img src="/img/sns02.png" alt="" />
+                <img src="/img/sns03.png" alt="" />
+                <img src="/img/sns04.png" alt="" />
+              </figure>
+                <figure>
+                  <img src="/img/sns05.png" alt="" />
+                  <img src="/img/sns06.png" alt="" />
+                  <img src="/img/sns07.png" alt="" />
+                  <img src="/img/sns08.png" alt="" />
+                </figure>
+            </div>
           </div>
           <div class="contact--wrapper">
             <h3>Contacts</h3>
@@ -131,14 +189,12 @@
               </div>
             </div>
           </div>
-          <div class="map--wrapper">
-
-          </div>
+          <div class="map--wrapper"></div>
         </main>
         <footer>
           <p>&copy;N.Sweets All right reserved</p>
         </footer>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
