--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Bakery store LP page</title>
   </head>
@@ -42,17 +43,15 @@
                 <h4>Every person is unique. Why shouldn't thier cake be?</h4>
                 <button>choose a cake</button>
               </div>
+
               <div class="header--wrapper__leftImg">
                 <figure>
                   <img
-                    src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg"
+                    src="./img/Carrot-Cake-Bundt-Cakes-Cover-1.webp"
                     alt=""
                   />
-                  <img src="./img/2021_June_Wai+Group_S0A9752.jpeg" alt="" />
-                  <img
-                    src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg"
-                    alt=""
-                  />
+                  <img src="./img/Chocolate-Cake-for-Two-Cover.webp" alt="" />
+                  <img src="./img/Wedding-cake-cupcakes-cover.webp" alt="" />
                 </figure>
               </div>
             </div>
@@ -60,6 +59,7 @@
               <figure>
                 <img src="./img/cake_headerImg.png" alt="" />
               </figure>
+              
             </div>
           </div>
         </div>
@@ -69,11 +69,11 @@
             <h3>Cakes & Sweets</h3>
             <div class="products--wrapper__img">
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
+                <img src="./img/Fully-loaded-carrot-cake-cover.webp" alt="" />
+                <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
+                <img src="./img/Funfetti-Cupcake-Cover.webp" alt="" />
+                <img src="./img/Plum-Scone-Drizzle-1.webp" alt="" />
+                <img src="./img/Pumpkin-Bundt-Cake-on-Stand.webp" alt="" />
               </figure>
             </div>
           </div>
@@ -102,21 +102,34 @@
           </div>
           <div class="bestSeller--wrapper">
             <div class="bestSeller--text">
-              <h3>Best seller</h3>
+              <h3>Best seller & Review</h3>
               <h3>Whole catalog</h3>
             </div>
             <div class="bestSeller--img">
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <figcaption>Stickey toffy pudding</figcaption>
+                <img
+                  src="./img/New-Feat-Image-Cinnamon-Roll-Muffin.webp"
+                  alt=""
+                />
+                <figcaption>
+                  The Apple Fritter is HUGE, but light and full of apple chunks
+                  which keeps it moist.”<br> — Local Guide (Google Reviews, August
+                  2022)
+                </figcaption>
               </figure>
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <figcaption>Apple cider donut</figcaption>
+                <img src="./img/Banana-Bourbon-Coffee-Cake-Cover.webp" alt="" />
+                <figcaption>
+                  “Peanut butter cookies are super cool. Come!”<br> — Bruno (Google
+                  Reviews, July 2022)
+                </figcaption>
               </figure>
               <figure>
-                <img src="./img/89fc19d7564b89c99bccb03bde08131b.jpeg" alt="" />
-                <figcaption>Apple pie gnola bars</figcaption>
+                <img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" />
+                <figcaption>
+                  “Peanut butter cookies are super cool. Come!”<br> — Bruno (Google
+                  Reviews, July 2022)
+                </figcaption>
               </figure>
             </div>
           </div>
@@ -125,10 +138,7 @@
             <div class="feature--contents__wrapper">
               <div class="feature--wrapper__left">
                 <figure>
-                  <img
-                    src="./img/e75dbd3c39544c5dbd5b17588dba7f8d.jpeg"
-                    alt=""
-                  />
+                  <img src="./img/pexels-mikhail-nilov-6958003.jpg" alt="" />
                 </figure>
               </div>
               <div class="feature--wrapper__right">
@@ -155,41 +165,51 @@
             <h3>@yummy_sweets</h3>
             <div class="sns--img">
               <figure>
-                <img src="/img/sns01.png" alt="" />
-                <img src="/img/sns02.png" alt="" />
-                <img src="/img/sns03.png" alt="" />
-                <img src="/img/sns04.png" alt="" />
+                <img src="./img/sns01.png" alt="" />
+                <img src="./img/sns02.png" alt="" />
+                <img src="./img/sns03.png" alt="" />
+                <img src="./img/sns04.png" alt="" />
               </figure>
-                <figure>
-                  <img src="/img/sns05.png" alt="" />
-                  <img src="/img/sns06.png" alt="" />
-                  <img src="/img/sns07.png" alt="" />
-                  <img src="/img/sns08.png" alt="" />
-                </figure>
+              <figure>
+                <img src="./img/sns05.png" alt="" />
+                <img src="./img/sns06.png" alt="" />
+                <img src="./img/sns07.png" alt="" />
+                <img src="./img/sns08.png" alt="" />
+              </figure>
             </div>
           </div>
           <div class="contact--wrapper">
             <h3>Contacts</h3>
             <div class="contact--contents__wrapper">
               <div class="contact--phone__wrapper">
-                <p>Phone</p>
+                <h5>Phone</h5>
                 <p>0906233580</p>
               </div>
               <div class="contact--email__wrapper">
-                <p>E-mail</p>
+                <h5>E-mail</h5>
                 <p>ea80002@gmail.com</p>
               </div>
               <div class="contact--address__wrapper">
-                <p>Address</p>
+                <h5>Address</h5>
                 <p>3738 Angus Drive</p>
               </div>
               <div class="contact--working__wrapper">
-                <p>Working hours</p>
+                <h5>Working hours</h5>
                 <p>Daily: 08:00~22:00</p>
               </div>
             </div>
+            <div class="googlemap-wrapper">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10410.153705976143!2d-123.14264060939831!3d49.28514281930388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486722983fd3f63%3A0x1793ee2a33d8acda!2sWest%20End%2C%20Vancouver%2C%20BC!5e0!3m2!1sen!2sca!4v1680560013349!5m2!1sen!2sca"
+                width="100%"
+                height="450"
+                style="border: 0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
-          <div class="map--wrapper"></div>
         </main>
         <footer>
           <p>&copy;N.Sweets All right reserved</p>
