Best seler section has been changed

--- a/index.html
+++ b/index.html
@@ -32,183 +32,181 @@
       </div>
     </nav>
 
-    <header>
-      <div class="header--wrapper__left">
-        <div class="header--wrapper__leftContents">
-          <h1>Special cakes for special occasions!</h1>
-          <h4>Every person is unique. Why shouldn't thier cake be?</h4>
-          <button>choose a cake</button>
-        </div>
-
-        <div class="header--wrapper__leftImg">
-          <figure>
-            <img src="./img/Carrot-Cake-Bundt-Cakes-Cover-1.webp" alt="" />
-            <img src="./img/Chocolate-Cake-for-Two-Cover.webp" alt="" />
-            <img src="./img/Wedding-cake-cupcakes-cover.webp" alt="" />
-          </figure>
-        </div>
-      </div>
-      <div class="header--wrapper__rightImg">
-        <figure>
-          <img src="./img/cake_headerImg.png" alt="" />
-        </figure>
-      </div>
-    </header>
-
-    <main>
-      <div class="products--wrapper">
-        <h3>Cakes & Sweets</h3>
-        <div class="products--wrapper__img">
-          <figure>
-            <img
-              src="./img/Blackberry-Earl-Grey-Cupcakes-Cover-1.webp"
-              alt=""
-            />
-            <img src="./img/Fully-loaded-carrot-cake-cover.webp" alt="" />
-            <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
-            <img src="./img/Funfetti-Cupcake-Cover.webp" alt="" />
-            <img src="./img/Plum-Scone-Drizzle-1.webp" alt="" />
-            <img src="./img/Pumpkin-Bundt-Cake-on-Stand.webp" alt="" />
-          </figure>
-        </div>
-      </div>
-
-      <div class="aboutUs--wrapper">
-        <div class="aboutUs--contents__wrapper">
-          <div class="aboutUs--text">
-            <h3>About us</h3>
-            <p>
-              Help celebrate a special day or commemorate a significant occasion
-              with a sweet treat from N.Sweet Bakery. Where you are searching
-              for a special birthday cake. Or simply looking for a sweet ending
-              to an everyday meal.
-            </p>
-            <p>
-              N.Sweet is sure to have something freshly baked to suit your mood.
-              We are proud to offer a wide variety of freshly baked goods daily.
-              including gourmet cakes, cookies, pies, cheesecakes, brownies and
-              over 20 flavors of cupcakes that no one can resist.
-            </p>
+    <div class="contents--wrapper">
+      <header>
+        <div class="header--wrapper__left">
+          <div class="header--wrapper__leftContents">
+            <h1>Special cakes for special occasions!</h1>
+            <h4>Every person is unique. Why shouldn't thier cake be?</h4>
+            <button>choose a cake</button>
           </div>
-          <figure>
-            <img src="./img/cookie.png" alt="" />
-          </figure>
-        </div>
-      </div>
-      <div class="bestSeller--wrapper">
-        <div class="bestSeller--text">
-          <h3>Best seller & Review</h3>
-          <!-- <h4>Whole catalog</h4> -->
-        </div>
-        <div class="bestSeller--img">
-          
-          <figure>
-            <img src="./img/Banana-Bourbon-Coffee-Cake-Cover.webp" alt="" />
-            <figcaption>
-              “Peanut butter cookies are super cool. Come!”
-              <br />
-              — Bruno (Google Reviews, July 2022)
-            </figcaption>
-          </figure>
-          <!-- <figure>
-            <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
-            <figcaption>
-              “Peanut butter cookies are super cool. Come!”
-              <br />
-              — Bruno (Google Reviews, July 2022)
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" />
-            <figcaption>
-              “Peanut butter cookies are super cool. Come!”
-              <br />
-              — Bruno (Google Reviews, July 2022)
-            </figcaption>
-          </figure> -->
-        </div>
-      </div>
-      <div class="feature--wrapper">
-        <h3>What makes us special?</h3>
-        <div class="feature--contents__wrapper">
-          <div class="feature--wrapper__left">
+          <div class="header--wrapper__leftImg">
             <figure>
-              <img src="./img/pexels-mikhail-nilov-6958003.jpg" alt="" />
-            </figure>
-          </div>
-          <div class="feature--wrapper__right">
-            <p>
-              We carefully select our ingredients for their freshness, flavor
-              and natural value. We choose organic, locally grown products when
-              available. Everything we make embodies our commitment to
-              consistency and excellence. The heart of the bakery is a small,
-              dedicated group of hard working bakers.
-            </p>
-            <p>
-              We are grateful to our amazing staff, loyal customers, and the
-              most supportive local community who allow us to do the work we
-              love every day.
-            </p>
-            <figure>
-              <img src="./img/feature01.png" alt="" />
-              <img src="./img/feature.02.png" alt="" />
+              <img src="./img/Carrot-Cake-Bundt-Cakes-Cover-1.webp" alt="" />
+              <img src="./img/Chocolate-Cake-for-Two-Cover.webp" alt="" />
+              <img src="./img/Wedding-cake-cupcakes-cover.webp" alt="" />
             </figure>
           </div>
         </div>
-      </div>
-      <div class="sns--wrapper">
-        <h3>@N.sweets</h3>
-        <div class="sns--img">
-          <div class="sns--img__top">
-            <img src="./img/sns01.png" alt="" />
-            <img src="./img/sns02.png" alt="" />
-            <img src="./img/sns03.png" alt="" />
-            <img src="./img/sns04.png" alt="" />
-          </div>
-          <div class="sns--img__bottom">
-            <img src="./img/sns05.png" alt="" />
-            <img src="./img/sns06.png" alt="" />
-            <img src="./img/sns07.png" alt="" />
-            <img src="./img/sns08.png" alt="" />
+        <div class="header--wrapper__rightImg">
+          <figure>
+            <img src="./img/cake_headerImg.png" alt="" />
+          </figure>
+        </div>
+      </header>
+      <main>
+        <div class="products--wrapper">
+          <h3>Cakes & Sweets</h3>
+          <div class="products--wrapper__img">
+            <figure>
+              <img
+                src="./img/Blackberry-Earl-Grey-Cupcakes-Cover-1.webp"
+                alt=""
+              />
+              <img src="./img/Fully-loaded-carrot-cake-cover.webp" alt="" />
+              <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
+              <img src="./img/Funfetti-Cupcake-Cover.webp" alt="" />
+              <img src="./img/Plum-Scone-Drizzle-1.webp" alt="" />
+              <img src="./img/Pumpkin-Bundt-Cake-on-Stand.webp" alt="" />
+            </figure>
           </div>
         </div>
-      </div>
-      <div class="contact--wrapper">
-        <h3>Contacts</h3>
-        <div class="contact--contents__wrapper">
-          <div class="contact--phone__wrapper">
-            <h5>Phone</h5>
-            <p>0906233580</p>
-          </div>
-          <div class="contact--email__wrapper">
-            <h5>E-mail</h5>
-            <p>ea80002@gmail.com</p>
-          </div>
-          <div class="contact--address__wrapper">
-            <h5>Address</h5>
-            <p>3738 Angus Drive</p>
-          </div>
-          <div class="contact--working__wrapper">
-            <h5>Working hours</h5>
-            <p>Daily: 08:00~22:00</p>
+        <div class="aboutUs--wrapper">
+          <div class="aboutUs--contents__wrapper">
+            <div class="aboutUs--text">
+              <h3>About us</h3>
+              <p>
+                Help celebrate a special day or commemorate a significant occasion
+                with a sweet treat from N.Sweet Bakery. Where you are searching
+                for a special birthday cake. Or simply looking for a sweet ending
+                to an everyday meal.
+              </p>
+              <p>
+                N.Sweet is sure to have something freshly baked to suit your mood.
+                We are proud to offer a wide variety of freshly baked goods daily.
+                including gourmet cakes, cookies, pies, cheesecakes, brownies and
+                over 20 flavors of cupcakes that no one can resist.
+              </p>
+            </div>
+            <figure>
+              <img src="./img/cookie.png" alt="" />
+            </figure>
           </div>
         </div>
-        <div class="googlemap-wrapper">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10410.153705976143!2d-123.14264060939831!3d49.28514281930388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486722983fd3f63%3A0x1793ee2a33d8acda!2sWest%20End%2C%20Vancouver%2C%20BC!5e0!3m2!1sen!2sca!4v1680560013349!5m2!1sen!2sca"
-            width="100%"
-            height="300"
-            style="border: 0;"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <div class="bestSeller--wrapper">
+          <div class="bestSeller--text">
+            <h3>Best seller & Review</h3>
+            <!-- <h4>Whole catalog</h4> -->
+          </div>
+          <div class="bestSeller--img">
+      
+            <figure>
+              <img src="./img/Banana-Bourbon-Coffee-Cake-Cover.webp" alt="" />
+              <figcaption>
+                “Peanut butter cookies are super cool. Come!”
+                <br />
+                — Bruno (Google Reviews, July 2022)
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="./img/Best-Brownies-Overhead-Multiples.webp" alt="" />
+              <figcaption>
+                “Peanut butter cookies are super cool. Come!”
+                <br />
+                — Bruno (Google Reviews, July 2022)
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="./img/Vanilla-Cardamom-Cake-Cover.webp" alt="" />
+              <figcaption>
+                “Peanut butter cookies are super cool. Come!”
+                <br />
+                — Bruno (Google Reviews, July 2022)
+              </figcaption>
+            </figure>
+          </div>
         </div>
-      </div>
-    </main>
-
-    <footer>
-      <p>&copy;N.Sweets All right reserved</p>
-    </footer>
+        <div class="feature--wrapper">
+          <h3>What makes us special?</h3>
+          <div class="feature--contents__wrapper">
+            <div class="feature--wrapper__left">
+              <figure>
+                <img src="./img/pexels-mikhail-nilov-6958003.jpg" alt="" />
+              </figure>
+            </div>
+            <div class="feature--wrapper__right">
+              <p>
+                We carefully select our ingredients for their freshness, flavor
+                and natural value. We choose organic, locally grown products when
+                available. Everything we make embodies our commitment to
+                consistency and excellence. The heart of the bakery is a small,
+                dedicated group of hard working bakers.
+              </p>
+              <p>
+                We are grateful to our amazing staff, loyal customers, and the
+                most supportive local community who allow us to do the work we
+                love every day.
+              </p>
+              <figure>
+                <img src="./img/feature01.png" alt="" />
+                <img src="./img/feature.02.png" alt="" />
+              </figure>
+            </div>
+          </div>
+        </div>
+        <div class="sns--wrapper">
+          <h3>@N.sweets</h3>
+          <div class="sns--img">
+            <div class="sns--img__top">
+              <img src="./img/sns01.png" alt="" />
+              <img src="./img/sns02.png" alt="" />
+              <img src="./img/sns03.png" alt="" />
+              <img src="./img/sns04.png" alt="" />
+            </div>
+            <div class="sns--img__bottom">
+              <img src="./img/sns05.png" alt="" />
+              <img src="./img/sns06.png" alt="" />
+              <img src="./img/sns07.png" alt="" />
+              <img src="./img/sns08.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="contact--wrapper">
+          <h3>Contacts</h3>
+          <div class="contact--contents__wrapper">
+            <div class="contact--phone__wrapper">
+              <h5>Phone</h5>
+              <p>0906233580</p>
+            </div>
+            <div class="contact--email__wrapper">
+              <h5>E-mail</h5>
+              <p>ea80002@gmail.com</p>
+            </div>
+            <div class="contact--address__wrapper">
+              <h5>Address</h5>
+              <p>3738 Angus Drive</p>
+            </div>
+            <div class="contact--working__wrapper">
+              <h5>Working hours</h5>
+              <p>Daily: 08:00~22:00</p>
+            </div>
+          </div>
+          <div class="googlemap-wrapper">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10410.153705976143!2d-123.14264060939831!3d49.28514281930388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486722983fd3f63%3A0x1793ee2a33d8acda!2sWest%20End%2C%20Vancouver%2C%20BC!5e0!3m2!1sen!2sca!4v1680560013349!5m2!1sen!2sca"
+              width="100%"
+              height="300"
+              style="border: 0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>&copy;N.Sweets All right reserved</p>
+      </footer>
+    </div>
   </body>
 </html>
